# location-scraper

./: .gitignore  Cargo.toml  README.md
prisma/: dev.db  dev.db-journal  schema.prisma
prisma/migrations/20240217192613_init/: migration.sql
src/: main.rs
src/afedim/: scraper.rs
src/core/: mod.rs
src/db/: mod.rs
